--- a/src/assets/dark-mode.css
+++ b/src/assets/dark-mode.css
@@ -402,7 +402,7 @@
 } 
 
 /* Dark Mode Ghost Typed Text */
-[data-theme="dark"] .ghost-input .ghost-typed {
+[data-theme="dark"] .ghost-input, [data-theme="dark"] .ghost-typed {
   color: var(--cb-text-primary);
 } 
 
@@ -475,7 +475,7 @@
   color: var(--cb-text-purple-light) !important;
 }
 
-[data-theme="dark"] .read-more-count, .help-circle, .help-question {
+[data-theme="dark"] .read-more-count, [data-theme="dark"] .help-circle, .help-question {
   color: var(--cb-text-purple-light) !important;
 }
 
@@ -495,7 +495,18 @@
 
 [data-theme="dark"] .org-card {
   background: var(--cb-purple-sheen) !important;
-  box-shadow: 0 8px 18px rgba(20,20,20,0.06);
-  border: 1px solid rgba(0,0,0,0.06);
-  transition: transform 160ms ease, box-shadow 160ms ease, background 160ms ease;
+  box-shadow: 0 8px 18px rgba(20,20,20,0.06) !important;
+  border: 1px solid rgba(0,0,0,0.06) !important;
+  transition: transform 160ms ease, box-shadow 160ms ease, background 160ms ease !important;
+  color: var(--cb-text-inverse) !important
+}
+
+
+[data-theme="dark"] .org-card .org-card-title, [data-theme="dark"] .org-card div, [data-theme="dark"] .contact-notice-sub{
+  color: var(--cb-text-inverse) !important
+}
+
+
+[data-theme="dark"] .feedback-btn {
+  color: #ffffff !important;
 }
